Added login and index html pages

--- a/Website/index.html
+++ b/Website/index.html
@@ -1,6 +1,17 @@
 <html>
     <head>
+        <title>
+            Welcome!
+        </title>
+
+        <script>
+
+        </script>
     </head>
     <body>
+        <br/>
+        <form action="login.html">
+            <input  type="submit" value="Login"/>
+        </form>
     </body>
 </html>
