Created login page js file

--- a/Website/login.html
+++ b/Website/login.html
@@ -3,18 +3,7 @@
         <title>
             Login
         </title>
-        <script>
-            function onClick()
-            {
-                var user = document.getElementsByName("username")[0].value;
-                var pass = document.getElementsByName("password")[0].value;
-                console.log(user);
-                console.log(pass);
-                if(user == "abcd")
-                {
-                    window.location = "index.html";
-                }
-            }
+        <script src="login.js">
         </script>
     </head>
     <body> 
